Fixed Overlay overflowing text

--- a/app/globals.css
+++ b/app/globals.css
@@ -127,10 +127,6 @@ code {
 }
 /* -------------- */
 .search-container-overlay {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-self: center;
   width: 100%;
   height: 100%;
   background-color: black;
@@ -148,24 +144,13 @@ code {
 .search-container-overlay.active {
   opacity: 100%;
   pointer-events: auto;
-  overflow: auto;
 }
 body.no-scroll {
   overflow: hidden;
 }
 
-.searchIconContainer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 .searchIcon:hover {
   cursor: pointer;
-}
-
-.search-container-overlay .centerContainer {
-  height: 70%;
 }
 
 .ifYouWishParagraph{
